Deformed Lattice undeforms after setting keyframe #87065

Closed
opened 2021-03-31 00:06:10 +02:00 by Everton Schneider · 9 comments

System Information
Operating system: Linux-5.8.0-48-generic-x86_64-with-glibc2.32 64 Bits
Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.67

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-30 17:43, hash: 67b40f829e
Worked: (2.92 Release)

Short description of error
After creating a keyframe on a simple deform modifier on lattice it pops back to its undeformed shape.

Exact steps for others to reproduce the error

  • Open the attached file and create another keyframe on the simple deform modifier of the lattice.
  • After pressing "I" to insert the keyframe note that the lattice resets to its normal shape.

Lattice_Crash.blend

**System Information** Operating system: Linux-5.8.0-48-generic-x86_64-with-glibc2.32 64 Bits Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.67 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-30 17:43, hash: `67b40f829e` Worked: (2.92 Release) **Short description of error** After creating a keyframe on a simple deform modifier on lattice it pops back to its undeformed shape. **Exact steps for others to reproduce the error** - Open the attached file and create another keyframe on the simple deform modifier of the lattice. - After pressing "I" to insert the keyframe note that the lattice resets to its normal shape. [Lattice_Crash.blend](https://archive.blender.org/developer/F9915024/Lattice_Crash.blend)

Added subscriber: @EvertonSchneider

Added subscriber: @EvertonSchneider
Member

Closed as duplicate of #87056

Closed as duplicate of #87056

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

Changed status from 'Duplicate' to: 'Confirmed'

Changed status from 'Duplicate' to: 'Confirmed'

Reopening as this report has two issues (crash + lattice returning to its undeformed state after inserting a keyframe), and only the first of those is a duplicate of #87056.

Reopening as this report has two issues (crash + lattice returning to its undeformed state after inserting a keyframe), and only the first of those is a duplicate of #87056.
Sybren A. Stüvel changed title from Deformed Lattice crash after frame change to Deformed Lattice undeforms after setting keyframe 2021-04-01 12:35:46 +02:00

This issue was referenced by 952c4e41bb

This issue was referenced by 952c4e41bb4dae0d1b4a36a316f6cf67c054afe0

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sybren A. Stüvel self-assigned this 2021-04-01 16:02:51 +02:00
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

In #87065#1139669, @dr.sybren wrote:
Reopening as this report has two issues (crash + lattice returning to its undeformed state after inserting a keyframe), and only the first of those is a duplicate of #87056.

Ah, good call!

> In #87065#1139669, @dr.sybren wrote: > Reopening as this report has two issues (crash + lattice returning to its undeformed state after inserting a keyframe), and only the first of those is a duplicate of #87056. Ah, good call!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87065
No description provided.